<resources>
    <string name="app_name">intern.apply</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="survey_header">Intern.apply Customer Survey</string>
    <string name="action_survey">Survey</string>
    <string name="submit">Submit</string>

    <string name="InternalServerError">Internal server error, please try again later</string>

    <!-- Strings related to Contact us -->
    <string name="action_settings">Settings</string>
    <string name="action_contact_us">Contact us</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="_66_chancellors_cir_winnipeg_mb_r3t_2n2">66 Chancellors Cir, Winnipeg, MB R3T 2N2</string>
    <string name="_1_204_1234_567">+1 (204) 1234–567</string>
    <string name="your_email_com">your@email.com</string>
    <string name="intern_apply_com">intern@apply.com</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="MessageSuccess">Message was sent successfully</string>
    <string name="SurveySuccess">Survey was sent successfully</string>
    <string name="InvalidEmail">Invalid email address</string>
    <string name="InvalidTitle">Invalid title (max 100 characters)</string>
    <string name="InvalidMessage">Invalid message body (max 300 characters)</string>
    <string name="CommentSuccess">Comment was sent successfully</string>
    <string name="InvalidCommentBody">Invalid comment body (max 300 characters)</string>
    <string name="InvalidCommentName">Invalid name (max 25 characters)</string>
    <string name="InvalidSurvey">Please respond to every question</string>

    <!-- Strings related to Add Job -->
    <string name="add_job_title">Add Job</string>
    <string name="job_organization">Organization</string>
    <string name="job_title">Title</string>
    <string name="job_description">Description</string>
    <string name="add_job_button">Submit</string>
    <string name="job_location">Location</string>
    <string name="job_url">URL</string>
    <string name="InvalidJobOrganization">Invalid job organization (max 45 characters)</string>
    <string name="InvalidJobTitle">Invalid job title (max 100 characters)</string>
    <string name="InvalidJobLocation">Invalid job location (max 45 characters)</string>
    <string name="InvalidJobUrl">Invalid job URL (max 1000 characters)</string>
    <string name="InvalidJobDescription">Invalid job description (max 2000 characters)</string>

    <!-- Strings related to viewing a job -->
    <string name="ratedSuccessfully">Job was rated successfully</string>
    <string name="votes">votes</string>
    <string name="ratingError">There was an error rating this job</string>
    <string name="SalarySuccess">Salary submitted successfully</string>
    <string name="InvalidSalary">Invalid salary (should be greater than 0)</string>
    <string name="InvalidSalaryType">Please pick a pay duration</string>

    <!-- Strings related to Q&A -->
    <string name="qna_title">Q&amp;A</string>
    <string name="add_question">Add Question</string>
    <string name="question">Question</string>
    <string name="ask">Ask</string>
    <string name="questionSuccess">Question was added successfully</string>
    <string name="invalidQuestionTitle">Invalid question title (max 45 characters)</string>
    <string name="invalidQuestionBody">Invalid question body (max 1000 characters)</string>
    <string name="invalidQuestionAuthor">Invalid name (max 25 characters)</string>
    <string name="couldNotGetQuestion">Could not get the question, please try again later</string>

    <string name="apply">apply</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="your_name">Your Name</string>
    <string name="answersTitle">Answers</string>
    <string name="byAuthor">By</string>
    <string name="add_answer_title">Add Answer</string>
    <string name="your_answer">Your Answer</string>
    <string name="answer_button">answer</string>
    <string name="answerSuccess">Your answer was successfully added</string>
    <string name="invalidAnswerAuthor">Invalid name (max 45 characters)</string>
    <string name="invalidAnswerBody">Invalid answer (max 1000 characters)</string>
    <string name="searchQueryLengthError">Search query has to be less than 100 characters</string>

</resources>
