<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="intern.apply.internapply.view.contactusactivity.ContactUsActivity">

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvActualAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_66_chancellors_cir_winnipeg_mb_r3t_2n2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="66 Chancellors Cir, Winnipeg, MB R3T 2N2" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_204_1234_567"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="+1 (204) 1234-567" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvActualEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intern_apply_com"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvSendUsAMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_us_a_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:paddingBottom="5dp"
        android:paddingTop="30dp"
        tools:text="Send us a message" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/intern_apply_com"
        android:paddingBottom="5dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:paddingBottom="5dp"
        android:inputType="textEmailSubject" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/message"
        android:paddingBottom="5dp"
        android:inputType="textMultiLine|textShortMessage" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/send" />

</LinearLayout>
