<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="intern.apply.internapply.view.addquestionactivity.AddQuestionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_question"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        style="@style/Base.TextAppearance.AppCompat" />

    <EditText
        android:id="@+id/etQuestionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:paddingBottom="5dp"
        android:inputType="textEmailSubject" />

    <EditText
        android:id="@+id/etQuestionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:paddingBottom="5dp"
        android:inputType="textEmailSubject" />

    <EditText
        android:id="@+id/etQuestionBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/question"
        android:paddingBottom="5dp"
        android:inputType="textMultiLine|textShortMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addNewQuestion"
        android:text="@string/ask" />

</LinearLayout>
