<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="intern.apply.internapply.view.viewjobactivity.ViewJobActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="16dp"
                android:padding="0dp"
                android:scrollHorizontally="false"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_dark"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jobOrganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:padding="0dp"
                android:text=""
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/jobLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:padding="0dp"
                android:text=""
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/jobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="top"
                android:padding="0dp"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                tools:text="" />

            <Button
                android:id="@+id/jobApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:padding="0dp"
                android:text="@string/apply"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="viewComments"
                android:text="@string/comments" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="30dp"
                android:text="@string/add_a_comment"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                tools:text="Send us a message" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/your_name"
                android:inputType="textEmailSubject"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/etMessageComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textMultiLine|textShortMessage"
                android:paddingBottom="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/send" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
